--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.2"
 djangorestframework = "^3.14.0"
+djoser = "^2.2.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [build-system]
