--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^4.2.2"
 djangorestframework = "^3.14.0"
 djoser = "^2.2.0"
 djangorestframework-simplejwt = "^5.2.2"
+redis = "^4.6.0"
+celery = "^5.3.1"
 
 
 [build-system]
