--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djoser = "^2.2.0"
 djangorestframework-simplejwt = "^5.2.2"
 redis = "^4.6.0"
 celery = "^5.3.1"
+flower = "^2.0.0"
 
 
 [build-system]
