--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "^5.2.2"
 redis = "^4.6.0"
 celery = "^5.3.1"
 flower = "^2.0.0"
+gunicorn = "^21.2.0"
 
 
 [build-system]
