--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ redis = "^4.6.0"
 celery = "^5.3.1"
 flower = "^2.0.0"
 gunicorn = "^21.2.0"
+faker = "^19.2.0"
 
+
+[tool.poetry.group.test.dependencies]
+faker = "^19.2.0"
 
 [build-system]
 requires = ["poetry-core"]
